feat: add WIP for deploy process

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,5 +1,5 @@
 build:
-	go run ../cmd/main.go build hello-service
+	go run ../cmd/main.go build hello-service -t master
 
 deploy:
-	go run ../cmd/main.go deploy
+	go run ../cmd/main.go deploy local hello-service -t master
