Added service deployment parsing and override file generation

--- a/example/Makefile
+++ b/example/Makefile
@@ -2,4 +2,4 @@ build:
 	go run ../cmd/main.go build hello-service -t master
 
 deploy:
-	go run ../cmd/main.go deploy local hello-service -t master
+	go run ../cmd/main.go deploy local hello-deployment -t master
