--- a/example/configurd/namespaces/local/hello-deployment.yml
+++ b/example/configurd/namespaces/local/hello-deployment.yml
@@ -1,2 +1,6 @@
-deployments:
+services:
   - service: "hello-service"
+    overrides:
+      image:
+        repository: foomo/configurd-hello
+        tag: hehe 
