Fixed service deployment issue. Moved generated charts into configurd

--- a/example/configurd/namespaces/local/hello-deployment.yml
+++ b/example/configurd/namespaces/local/hello-deployment.yml
@@ -4,3 +4,8 @@ services:
       image:
         repository: foomo/configurd-hello
         tag: hehe 
+  - service: "hi-service"
+    overrides:
+      image:
+        repository: foomo/configurd-hello
+        tag: asd 
