--- a/example/configurd/charts/example/values.yaml
+++ b/example/configurd/charts/example/values.yaml
@@ -14,10 +14,13 @@ fullnameOverride: "example"
 
 service:
   type: NodePort
-  port: 8080
+  port: 80
+  targetPort: 3000
+
+env: []
 
 ingress:
-  enabled: false
+  enabled: true
   annotations: {}
   #  kubernetes.io/ingress.class: nginx
   # kubernetes.io/tls-acme: "true"
