--- a/example/configurd/services/hello-service.yml
+++ b/example/configurd/services/hello-service.yml
@@ -1,8 +1,5 @@
 service:
-  name: hello-service
-  docker:
+  build:
+    command: "docker build ../../application/"
     image: foomo/configurd-hello
-    file: Dockerfile
-    context: application
-    # options:
   chart: example
