--- a/example/configurd/services/hello-service.yml
+++ b/example/configurd/services/hello-service.yml
@@ -1,5 +1,5 @@
 service:
   build:
-    command: "docker build ../../application/"
+    command: "docker build application/"
     image: foomo/configurd-hello
   chart: example
