Refactor logging and some flags

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,8 +1,14 @@
 build:
 	go run ../cmd/main.go build hello-service -t master
 
-deploy:
-	go run ../cmd/main.go deploy local hello-deployment -t master
+install:
+	go run ../cmd/main.go install local hello-group -t master --build
 
-undeploy:
-	go run ../cmd/main.go undeploy local -d hello-deployment
+uninstall:
+	go run ../cmd/main.go uninstall local -g hello-group
+
+install-olaf:
+	go run ../cmd/main.go install olaf-group -n local -t latest --build -v
+
+uninstall-olaf:
+	go run ../cmd/main.go uninstall olaf-group -n local
