--- a/.gitignore
+++ b/.gitignore
@@ -120,4 +120,6 @@ modules.xml
 # Ignore all local history of files
 .history
 
+.todo
+
 # End of https://www.gitignore.io/api/go,jetbrains+all,visualstudiocode
