Refactor group loading and tidy up commands

--- a/example/configurd/namespaces/local/hello-group.yml
+++ b/example/configurd/namespaces/local/hello-group.yml
@@ -1,9 +1,11 @@
 group:
-  - service: "hello-service"
-    overrides:
-      args:
-        - "--greeting=hehe"
-  - service: "hi-service"
-    overrides:
-      args:
-        - "--greeting=hai"
+  services:
+    hello-service:
+      overrides:
+        args:
+          - "--greeting=hehe"
+    hi-service:
+      overrides:
+        args:
+          - "--greeting=hai"
+  jobs:
