Add init command and apply small fixes

--- a/example/configurd/charts/example/values.yaml
+++ b/example/configurd/charts/example/values.yaml
@@ -20,11 +20,12 @@ service:
 env: []
 
 ingress:
-  enabled: true
+  enabled: false
   annotations: {}
   #  kubernetes.io/ingress.class: nginx
   # kubernetes.io/tls-acme: "true"
-  paths: []
+  paths:
+    - "/"
   hosts:
     - chart-example.local
   tls: []
