--- a/example/configurd/namespaces/local/hello-group.yml
+++ b/example/configurd/namespaces/local/hello-group.yml
@@ -4,8 +4,26 @@ group:
       overrides:
         args:
           - "--greeting=hehe"
+        service:
+          targetPort: 80
+          port: 80
+        ingress:
+          enabled: true
+          paths:
+            - /services/hello
+          hosts:
+            - localhost
     hi-service:
       overrides:
         args:
           - "--greeting=hai"
+        service:
+          targetPort: 80
+          port: 80
+        ingress:
+          enabled: true
+          paths:
+            - /services/hi
+          hosts:
+            - localhost
   jobs:
