--- a/example/configurd/charts/example/templates/ingress.yaml
+++ b/example/configurd/charts/example/templates/ingress.yaml
@@ -1,41 +1,30 @@
-{{- if .Values.ingress.enabled -}}
-{{- $fullName := include "example.fullname" . -}}
-{{- $ingressPaths := .Values.ingress.paths -}}
-{{- $servicePort := .Values.service.port -}}
+{{- if and .Values.ingress.host .Values.ingress.path }}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: {{ $fullName }}
+  name: "{{ .Release.Name }}-ingress"
   labels:
-    app.kubernetes.io/name: {{ include "example.name" . }}
-    helm.sh/chart: {{ include "example.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/name: {{ .Release.Name }}
+    app.kubernetes.io/part-of: {{ .Values.group }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
+    helm.sh/chart: "{{ .Release.Name }}-{{ .Release.Revision }}"
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-{{- if .Values.ingress.tls }}
+{{- if .Values.ingress.secretName }}
   tls:
-  {{- range .Values.ingress.tls }}
     - hosts:
-      {{- range .hosts }}
-        - {{ . | quote }}
-      {{- end }}
-      secretName: {{ .secretName }}
-  {{- end }}
+      - {{ .Values.ingress.host }}
+      secretName: {{ .Values.ingress.secretName }}
 {{- end }}
   rules:
-  {{- range .Values.ingress.hosts }}
-    - host: {{ . | quote }}
+    - host: {{ .Values.ingress.host }}
       http:
         paths:
-	{{- range $ingressPaths }}
-          - path: {{ . }}
+          - path: {{ .Values.ingress.path }}
             backend:
-              serviceName: {{ $fullName }}
-              servicePort: {{ $servicePort }}
-	{{- end }}
-  {{- end }}
+              serviceName: {{ .Release.Name }}
+              servicePort: {{ .Values.service.containerPort }}
 {{- end }}
