--- a/example/configurd/charts/example/templates/service.yaml
+++ b/example/configurd/charts/example/templates/service.yaml
@@ -1,19 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "example.fullname" . }}
+  name: {{ .Release.Name }}
   labels:
-    app.kubernetes.io/name: {{ include "example.name" . }}
-    helm.sh/chart: {{ include "example.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/name: {{ .Release.Name }}
+    app.kubernetes.io/part-of: {{ .Values.group }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
+    helm.sh/chart: "{{ .Release.Name }}-{{ .Release.Revision }}"
 spec:
+  selector:
+    app.kubernetes.io/name: {{ .Release.Name }}
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.targetPort }}
+    - port: {{ .Values.service.containerPort }}
       protocol: TCP
-      name: http
-  selector:
-    app.kubernetes.io/name: {{ include "example.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
