--- a/example/configurd/charts/example/values.yaml
+++ b/example/configurd/charts/example/values.yaml
@@ -1,37 +1,59 @@
-# Default values for example.
+# Default values for test.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: foomo/configurd-hello
-  tag: master
-  pullPolicy: IfNotPresent # Must be set when working with a local cluster
+  repository: nginx
+  pullPolicy: IfNotPresent
 
-nameOverride: "example"
-fullnameOverride: "example"
+imagePullSecrets: []
+nameOverride: ""
+fullnameOverride: ""
+
+serviceAccount:
+  # Specifies whether a service account should be created
+  create: true
+  # Annotations to add to the service account
+  annotations: {}
+  # The name of the service account to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name:
+
+podSecurityContext: {}
+  # fsGroup: 2000
+
+securityContext: {}
+  # capabilities:
+  #   drop:
+  #   - ALL
+  # readOnlyRootFilesystem: true
+  # runAsNonRoot: true
+  # runAsUser: 1000
 
 service:
-  type: NodePort
+  type: ClusterIP
   port: 80
-  targetPort: 3000
+  containerPort: 3000
+
+group: test
 
 env: []
+  # - name: TEST
+  #   value: "test"
+
+args: []
+  # - "arg1==one"
+
 
 ingress:
-  enabled: false
   annotations: {}
-  #  kubernetes.io/ingress.class: nginx
-  # kubernetes.io/tls-acme: "true"
-  paths:
-    - "/"
-  hosts:
-    - chart-example.local
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  host: ""
+  path: ""
+  secretName: ""
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -39,11 +61,11 @@ resources: {}
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   # limits:
-  #  cpu: 100m
-  #  memory: 128Mi
-# requests:
-#  cpu: 100m
-#  memory: 128Mi
+  #   cpu: 100m
+  #   memory: 128Mi
+  # requests:
+  #   cpu: 100m
+  #   memory: 128Mi
 
 nodeSelector: {}
 
