--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+dist
 # Created by https://www.gitignore.io/api/go,jetbrains+all,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=go,jetbrains+all,visualstudiocode
 
