separate image and tag in templates and logic

--- a/example/configurd/charts/example/templates/deployment.yaml
+++ b/example/configurd/charts/example/templates/deployment.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
         - name: {{ .Release.Name }}
-          image: {{ .Values.image.repository }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           {{- with .Values.args }}
           args:
