--- a/example/configurd/namespaces/local/hello-group.yml
+++ b/example/configurd/namespaces/local/hello-group.yml
@@ -10,6 +10,10 @@ group:
         ingress:
           path: /services/hello
           host: localhost
+        volumes:
+          - name: config
+            host: ./application
+            mount: /config/
     hi-service:
       overrides:
         args:
