update install to force a rolling update

--- a/example/configurd/charts/example/templates/deployment.yaml
+++ b/example/configurd/charts/example/templates/deployment.yaml
@@ -18,6 +18,8 @@ spec:
       labels:
         app.kubernetes.io/name: {{ .Release.Name }}
         app.kubernetes.io/part-of: {{ .Values.group }}
+      annotations:
+        timestamp: "{{ .Values.timestamp }}"
     spec:
       containers:
         - name: {{ .Release.Name }}
