--- a/example/configurd/charts/example/templates/deployment.yaml
+++ b/example/configurd/charts/example/templates/deployment.yaml
@@ -1,26 +1,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: "{{ .Release.Name }}"
+  name: "{{ .Chart.Name }}"
   labels:
-    app.kubernetes.io/name: {{ .Release.Name }}
-    app.kubernetes.io/part-of: {{ .Values.group }}
+    app.kubernetes.io/name: {{ .Chart.Name }}
+    app.kubernetes.io/part-of: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: "{{ .Release.Name }}-{{ .Release.Revision }}"
+    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Revision }}"
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ .Release.Name }}
-      app.kubernetes.io/part-of: {{ .Values.group }}
+      app.kubernetes.io/name: {{ .Chart.Name }}
+      app.kubernetes.io/part-of: {{ .Release.name }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ .Release.Name }}
-        app.kubernetes.io/part-of: {{ .Values.group }}
+        app.kubernetes.io/name: {{ .Chart.Name }}
+        app.kubernetes.io/part-of: {{ .Release.name }}
     spec:
       containers:
-        - name: {{ .Release.Name }}
+        - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           {{- with .Values.args }}
