--- a/example/configurd/charts/example/templates/ingress.yaml
+++ b/example/configurd/charts/example/templates/ingress.yaml
@@ -2,12 +2,12 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: "{{ .Release.Name }}-ingress"
+  name: "{{ .Chart.Name }}"
   labels:
-    app.kubernetes.io/name: {{ .Release.Name }}
-    app.kubernetes.io/part-of: {{ .Values.group }}
+    app.kubernetes.io/name: {{ .Chart.Name }}
+    app.kubernetes.io/part-of: {{ .Release.name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: "{{ .Release.Name }}-{{ .Release.Revision }}"
+    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Revision }}"
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
@@ -25,6 +25,6 @@ spec:
         paths:
           - path: {{ .Values.ingress.path }}
             backend:
-              serviceName: {{ .Release.Name }}
+              serviceName: {{ .Chart.Name }}
               servicePort: {{ .Values.service.containerPort }}
 {{- end }}
