--- a/example/configurd/charts/example/templates/service.yaml
+++ b/example/configurd/charts/example/templates/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Chart.Name }}
   labels:
-    app.kubernetes.io/name: {{ .Release.Name }}
-    app.kubernetes.io/part-of: {{ .Values.group }}
+    app.kubernetes.io/name: {{ .Chart.Name }}
+    app.kubernetes.io/part-of: {{ .Release.name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: "{{ .Release.Name }}-{{ .Release.Revision }}"
+    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Revision }}"
 spec:
   selector:
-    app.kubernetes.io/name: {{ .Release.Name }}
+    app.kubernetes.io/name: {{ .Chart.Name }}
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.containerPort }}
