--- a/example/configurd/charts/example/templates/tests/test-connection.yaml
+++ b/example/configurd/charts/example/templates/tests/test-connection.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app.kubernetes.io/name: {{ include "example.name" . }}
     helm.sh/chart: {{ include "example.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/instance: {{ .Chart.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
   annotations:
     "helm.sh/hook": test-success
