--- a/example/configurd/charts/example/templates/deployment.yaml
+++ b/example/configurd/charts/example/templates/deployment.yaml
@@ -6,18 +6,18 @@ metadata:
     app.kubernetes.io/name: {{ .Chart.Name }}
     app.kubernetes.io/part-of: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Revision }}"
+    helm.sh/chart: "{{ .Release.Name }}-{{ .Release.Revision }}"
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app.kubernetes.io/name: {{ .Chart.Name }}
-      app.kubernetes.io/part-of: {{ .Release.name }}
+      app.kubernetes.io/part-of: {{ .Release.Name }}
   template:
     metadata:
       labels:
         app.kubernetes.io/name: {{ .Chart.Name }}
-        app.kubernetes.io/part-of: {{ .Release.name }}
+        app.kubernetes.io/part-of: {{ .Release.Name }}
     spec:
       containers:
         - name: {{ .Chart.Name }}
