--- a/example/configurd/charts/example/templates/service.yaml
+++ b/example/configurd/charts/example/templates/service.yaml
@@ -4,9 +4,9 @@ metadata:
   name: {{ .Chart.Name }}
   labels:
     app.kubernetes.io/name: {{ .Chart.Name }}
-    app.kubernetes.io/part-of: {{ .Release.name }}
+    app.kubernetes.io/part-of: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: "{{ .Chart.Name }}-{{ .Chart.Revision }}"
+    helm.sh/chart: "{{ .Release.Name }}-{{ .Release.Revision }}"
 spec:
   selector:
     app.kubernetes.io/name: {{ .Chart.Name }}
