--- a/dummy/deployment-patch.yaml
+++ b/dummy/deployment-patch.yaml
@@ -1,16 +1,24 @@
+
 spec:
   template:
+    metadata:
+      labels:
+        {{ .PatchedLabelName }}: "true"
     spec:
       containers:
       - name: {{ .ContainerName }}
-        command: ["/bin/sh"]
-        args: ["-c", "while true; do echo dummy!; sleep 3600; done"]
         image: {{ .Image }}
+        command:
+        args:
         livenessProbe:
         readinessProbe:
         volumeMounts:
           - mountPath: {{ .MountPath }}
             name: "{{ .ContainerName }}-patch-mount"
+        ports:
+          - name: delve
+            containerPort: 2345
+            protocol: TCP
       volumes:
         - name: "{{ .ContainerName }}-patch-mount"
           hostPath:
