--- a/dummy/Dockerfile
+++ b/dummy/Dockerfile
@@ -1,8 +1,6 @@
-ARG IMAGE=golang:alpine
+ARG IMAGE=golang:latest
 FROM $IMAGE
 
-ARG IMAGE
-COPY delve.sh delve.sh
-RUN /bin/sh delve.sh $IMAGE
+RUN go get github.com/go-delve/delve/cmd/dlv
 
 ENTRYPOINT ["/bin/sh", "-c", "while true; do echo dummy!; sleep 3600; done"]
