--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
         "remotePath": "${workspaceFolder}",
         "port": 2345,
         "host": "127.0.0.1",
+        "trace": "log",
         "preLaunchTask": "delve start",
         "postDebugTask": "delve clean",
     },
