--- a/example/squadron/charts/example/Chart.yaml
+++ b/example/squadron/charts/example/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
-description: An Example Chart for Configurd
+description: An Example Chart for Squadron
 name: example
 version: 0.2.0
