--- a/example/squadron/services/hello-service.yml
+++ b/example/squadron/services/hello-service.yml
@@ -1,8 +1,8 @@
 service:
-  image: foomo/configurd-hi
+  image: foomo/squadron-hello
   build: "docker build application/"
   chart:
     name: example
-    repository: file://./configurd/charts/example
+    repository: file://./squadron/charts/example
     # path to the chart dir relative to the base path (example/)
     version: 0.2.0
