apply: small template fix, small changes to configuration structure

--- a/example/squadron/namespaces/local/hello-group.yml
+++ b/example/squadron/namespaces/local/hello-group.yml
@@ -1,6 +1,9 @@
 group:
   services:
     hello-service:
+      image:
+        repository: foomo/squadron-hello
+        tag: latest
       args:
         - "--greeting=hehe"
       service:
@@ -15,6 +18,9 @@ group:
           host: {{ .cwd }}/application
           mount: /config/
     hi-service:
+      image:
+        repository: foomo/squadron-hi
+        tag: latest
       args:
         - "--greeting=hai"
       service:
