--- a/example/squadron/charts/example/templates/ingress.yaml
+++ b/example/squadron/charts/example/templates/ingress.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.ingress.hosts }}
-{{ $serviceName := .Release.Name }}
+{{ $serviceName := .Chart.Name }}
 {{ $servicePort := .Values.service.containerPort }}
 apiVersion: extensions/v1beta1
 kind: Ingress
