--- a/example/squadron/charts/example/values.yaml
+++ b/example/squadron/charts/example/values.yaml
@@ -4,12 +4,10 @@
 
 replicaCount: 1
 
-image:
-  repository: nginx
-  tag: latest
-  pullPolicy: IfNotPresent
-
+image: nginx:latest
+imagePullPolicy: IfNotPresent
 imagePullSecrets: []
+
 nameOverride: ""
 fullnameOverride: ""
 
@@ -40,8 +38,6 @@ service:
     - 3000
   livenessProbe: {}
   readinessProbe: {}
-
-group: test
 
 env: []
   # - name: TEST
