--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -23,7 +23,7 @@ archives:
 
 brews:
   # Reporitory to push the tap to.
-  - github:
+  - tap:
       owner: foomo
       name: homebrew-squadron
     caveats: "squadron -h"
