apply small fixes and improvements. implement config and generate

--- a/squadron.yaml
+++ b/squadron.yaml
@@ -1,4 +1,3 @@
-# Schema version
 name: test
 version: "1.0"
 prefix: storefinder # optional
@@ -10,21 +9,23 @@ squadron:
       repository: https://nats-io.github.io/k8s/helm/charts/
     values:
       foo: bar
+      # foo:  print .PWD "/example/squadron/charts/example/Chart.yaml" | yaml  // /n and indent?
       nameOverride: nats
       natsbox:
         enabled: false
   frontend:
-    chart: "{{ .PWD }}/test/squadron/charts/example"
-    builds: # same as docker-compose
+    chart: "{{ .PWD }}/example/squadron/charts/example"
+    builds:
       buildFirst:
         image: registry.your-company.com/path/to/image
-        tag: {{ env "TAG" }}
-        context: "{{ .PWD }}/test/application/"
+        tag: {{ env "TAG" | base64 }}
+        context: "{{ .PWD }}/example/squadron/application/"
     values:
       image: "{{ .Squadron.frontend.builds.buildFirst.image }}:{{ .Squadron.frontend.builds.buildFirst.tag }}"
       service:
         ports:
           - {{ default .Squadron.frontend.builds.buildFirst "isolation" 80 }}
+
 
 # squadron up -n storefinder storefinder   = helm upgrage --install --create-namespace -n storefinder storefinder
 # squadron down -n storefinder storefinder = helm uninstall storefinder -n storefinder
@@ -33,14 +34,10 @@ squadron:
 # squadron build ..
 
 # squadron generate .. --tgz
-#todo implement generate
 
 # (squadron init ..)
 
 # squadron config {-f (merging optional)} -> prints out the config
-#todo implement config
 
 # squadron version
 # squadron help
-
-# check if cobra autocompletion works
