--- a/testdata/config-template/squadron.yaml
+++ b/testdata/config-template/squadron.yaml
@@ -15,13 +15,13 @@ squadron:
         image: docker.mycompany.com/mycomapny/frontend
     values:
       image:
-        tag: <%= .Squadron.frontend.builds.default.tag %>
-        repository: <%= .Squadron.frontend.builds.default.image %>
-      env: <%= env "LC_CTYPE" %>
-      global: <%= .Global.host %>
-      base64: <%= base64 "1234567890" %>
+        tag: <% .Squadron.frontend.builds.default.tag %>
+        repository: <% .Squadron.frontend.builds.default.image %>
+      env: <% env "LC_CTYPE" %>
+      global: <% .Global.host %>
+      base64: <% base64 "1234567890" %>
       values: |
-        <%= file "testdata/config-template/values.yaml" | indent 8 %>
+        <% file "testdata/config-template/values.yaml" | indent 8 %>
   frontend-admin:
     chart:
       name: mychart
@@ -33,5 +33,5 @@ squadron:
         image: docker.mycompany.com/mycomapny/frontend-admin
     values:
       image:
-        tag: <%= .Squadron.frontend_admin.builds.default.tag %>
-        repository: <%= .Squadron.frontend_admin.builds.default.image %>
+        tag: <% .Squadron.frontend_admin.builds.default.tag %>
+        repository: <% .Squadron.frontend_admin.builds.default.image %>
