--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,16 +9,19 @@ jobs:
   goreleaser:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go
-        uses: actions/setup-go@v1
-        with:
-          go-version: 1.16
-
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Unshallow
         run: git fetch --prune --unshallow
+
+      - name: Set up Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.16
+
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v2
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v1
