--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,19 @@
-name: goreleaser
+name: CI
 
 on:
   push:
-    tags:
-      - v*.*.*
+    branches:
+      - main
+  pull_request:
 
 jobs:
-  goreleaser:
+  build:
     runs-on: ubuntu-latest
     env:
       GOFLAGS: -mod=readonly
       GOPROXY: https://proxy.golang.org
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Unshallow
@@ -26,11 +27,5 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
 
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2
-        with:
-          distribution: goreleaser
-          version: latest
-          args: release --rm-dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
+      - name: Test
+        run: go test ./...
