wip: prepare test case

--- a/testdata/config-override/squadron.yaml
+++ b/testdata/config-override/squadron.yaml
@@ -24,3 +24,26 @@ squadron:
           - name: mycompany.com
             path: /
             port: 80
+  backend:
+    chart:
+      name: mychart
+      version: 0.1.0
+      repository: http://helm.mycompany.com/repository
+    builds:
+      service:
+        tag: latest
+        dockerfile: Dockerfile
+        image: docker.mycompany.com/mycomapny/frontend
+        args:
+          - "foo=foo"
+          - "bar=bar"
+    values:
+      image: docker.mycompany.com/mycomapny/frontend:latest
+      service:
+        ports:
+          - 80
+      ingress:
+        hosts:
+          - name: mycompany.com
+            path: /
+            port: 80
