--- a/testdata/config-template/values.yaml
+++ b/testdata/config-template/values.yaml
@@ -2,6 +2,6 @@ foo: bar
 bar:
   - foo
   - bar
-env: <% env "LC_CTYPE" %>
+env: <% env "SHELL" %>
 global: <% .Global.host %>
 base64: <% base64 "1234567890" %>
