--- a/testdata/config-template/squadron.yaml
+++ b/testdata/config-template/squadron.yaml
@@ -22,7 +22,7 @@ squadron:
         GLOBAL: <% .Global.host %>
         BASE64: <% base64 "1234567890" %>
         DEFAULT_VALUE: <% "" | default "fallback" %>
-        DEFAULT_INDEX_VALUE: <% defaultIndex global "notexists" "fallback" %>
+        DEFAULT_INDEX_VALUE: <% defaultIndex .Global "notexists" "fallback" %>
         # ONE_PASSWORD: <% op "ACCOUNT_NAME" "UUID" "FIELD" %>
         # ONE_PASSWORD: <% op "ACCOUNT_NAME" "Secret name" "FIELD" %>
         # ONE_PASSWORD: <% op "ACCOUNT_NAME" "Secret name wit global {{ .Global.host }}" "FIELD" %>
